--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,38 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.6.RELEASE</version>
     </parent>
-	<dependencies>  
+	<dependencies> 
+	
+	<dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>3.0.1.RELEASE</version>
+    </dependency>
+    <dependency>  
+       <groupId>log4j</groupId>  
+       <artifactId>log4j</artifactId>  
+       <version>1.2.15</version>  
+       <exclusions>  
+         <exclusion>  
+           <groupId>javax.mail</groupId>  
+           <artifactId>mail</artifactId>  
+         </exclusion>  
+         <exclusion>  
+           <groupId>javax.jms</groupId>  
+           <artifactId>jms</artifactId>  
+         </exclusion>  
+         <exclusion>  
+           <groupId>com.sun.jdmk</groupId>  
+           <artifactId>jmxtools</artifactId>  
+         </exclusion>  
+         <exclusion>  
+           <groupId>com.sun.jmx</groupId>  
+           <artifactId>jmxri</artifactId>  
+         </exclusion>  
+       </exclusions>  
+       <scope>runtime</scope>  
+     </dependency> 
+	 
 	    <dependency>  
 	      <groupId>junit</groupId>  
 	      <artifactId>junit</artifactId>  
