--- a/Employer/pom.xml
+++ b/Employer/pom.xml
@@ -24,6 +24,14 @@
 	      <version>3.8.1</version>  
 	      <scope>test</scope>  
 	    </dependency>  
+	    <!-- https://mvnrepository.com/artifact/org.codehaus.castor/castor -->
+<dependency>
+    <groupId>org.codehaus.castor</groupId>
+    <artifactId>castor</artifactId>
+    <version>1.4.1</version>
+    <type>pom</type>
+</dependency>
+	    
 	    <!-- https://mvnrepository.com/artifact/org.springframework/spring-oxm -->
 <dependency>
     <groupId>org.springframework</groupId>
