--- a/Employer/pom.xml
+++ b/Employer/pom.xml
@@ -38,6 +38,15 @@
     <artifactId>spring-oxm</artifactId>
     <version>3.0.0.RELEASE</version>
 </dependency>
+<dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
 	    <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm for handling hibernate-->
 <dependency>
     <groupId>org.springframework</groupId>
