--- a/Employer/pom.xml
+++ b/Employer/pom.xml
@@ -47,6 +47,25 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+<dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-jpa</artifactId>
+    <version>2.1.10.RELEASE</version>
+</dependency>
+        <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+<dependency>
+    <groupId>javax.persistence</groupId>
+    <artifactId>javax.persistence-api</artifactId>
+    <version>2.2</version>
+</dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-jpa -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jpa</artifactId>
+    <version>2.0.8</version>
+</dependency>
 	    <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm for handling hibernate-->
 <dependency>
     <groupId>org.springframework</groupId>
